// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App> should match snapshot 1`] = `
.c6 {
  user-select: none;
}

.c1 {
  text-decoration: none;
  position: relative;
  letter-spacing: 0.2em;
  color: var(--color-link);
}

.c1:link,
.c1:visited {
  color: var(--color-link);
}

.c1:focus {
  outline: thin dotted;
}

.c1:hover {
  color: #aaa;
}

.c1:link {
  -webkit-tap-highlight-color: rgba(102,102,102,0.5);
}

.c20 {
  width: 2rem;
  height: 2rem;
}

.c20 path:first-of-type {
  transition: fill 0.24s cubic-bezier(0.4,0,0.2,1);
  fill: #fff;
}

.c18 {
  padding: 1rem;
  width: 75px;
  display: inline-flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
  object-fit: contain;
  object-position: bottom;
  transition: flex-direction 0.24s cubic-bezier(0,0,0.2,1), width 0.24s cubic-bezier(0,0,0.2,1);
}

.c38 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: var(--color-dark-background-dark-surface);
  padding: 2rem 1.25rem;
}

.c38 p {
  color: var(--color-text-body);
}

.c39 {
  color: #df0909;
  display: inline-flex;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  height: 12px;
}

.c40 {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  transform: translateY(1px);
  display: inline-flex;
  width: 38px;
  height: 14px;
}

.c41 {
  padding-left: 0.3rem;
  text-decoration: underline;
}

.c42.c42 {
  flex-direction: row;
  display: flex;
  justify-content: space-between;
  padding: 0;
  width: 25vw;
  height: unset;
}

.c42.c42 > a {
  width: unset;
  flex-basis: unset;
  display: initial;
  padding: 1rem 1rem 1rem 0;
}

.c42.c42 > a:last-child {
  display: none;
}

.c42.c42 > a > svg path:first-of-type {
  fill: #fff;
}

.c5 {
  display: flex;
  justify-content: space-around;
  padding: 0;
  margin: 0;
}

.c5 > li {
  display: inline-flex;
}

.c5 > li > a {
  padding: 1rem;
}

.c9.c9 {
  fill: transparent;
  transform: scale(0);
  transform-origin: center;
  transition: transform 0.12s cubic-bezier(0.4,0,0.2,1), fill 0.48s cubic-bezier(0.4,0,0.2,1);
}

.c7 > g > path {
  fill: #000;
}

.c7 > g > polygon {
  fill: #fff;
}

.c8 {
  width: 24px;
  height: 24px;
}

.c0 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: rgba(255,255,255,0.05);
  position: absolute;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  height: 4rem;
  padding-left: 1.5rem;
  padding-right: 0.5rem;
}

.c3 {
  color: var(--color-text-body);
}

.c43 {
  height: 0;
  width: 0;
  visibility: hidden;
  position: absolute;
}

.c30.c30.c30 {
  color: unset;
  text-decoration: initial;
  letter-spacing: initial;
}

.c31 {
  color: var(--color-text-body);
  display: inline-flex;
  padding: 0 0.5rem;
  width: 90%;
  border: none;
  border-top: 1px solid var(--color-dark-background-light);
  border-bottom: 1px solid var(--color-dark-background-dark);
  opacity: 0.1;
  margin: 0 auto;
  margin-top: 1rem;
  padding: 0;
  height: 2px;
  order: 1;
  transition: margin-top 0.96s ease-in-out,margin-left 0.24s ease-in-out;
}

.c27 {
  color: var(--color-text-body);
  display: inline-flex;
  padding: 0 0.5rem;
  color: var(--color-text-secondary);
  border: none;
  border-top: 5px solid var(--color-text-secondary);
  margin: 0;
  padding: 0;
  height: 0.75rem;
  width: 8vw;
}

.c24 {
  font-size: 2rem;
  margin-bottom: 0;
}

.c26 {
  font-style: unset;
  padding-right: 0.15rem;
  opacity: 0.3;
}

.c28 {
  margin-top: 1rem;
}

.c25 {
  transition: color 0.24s cubic-bezier(0.4,0,0.2,1);
  color: var(--color-dark-purple);
  margin: 0;
  margin-top: -0.5rem;
  font-size: 1.2rem;
}

.c22 {
  display: flex;
  object-fit: cover;
  user-select: none;
  filter: grayscale(98%);
  border-radius: 0.125rem;
  box-shadow: none;
  transition: filter 0.12s cubic-bezier(0.4,0,0.2,1) 0.24s, margin-top 0.5s cubic-bezier(0.4,0.0,0.2,1), max-width 0.24s cubic-bezier(0.4,0.0,0.2,1),height 1s cubic-bezier(0.4,0.0,0.2,1), object-position 0.8s cubic-bezier(0.4,0.0,0.2,1), box-shadow 0.24s cubic-bezier(0.4,0.0,0.2,1);
}

.c21 {
  margin: 0;
  padding: 0;
  display: flex;
  width: calc(100% - 75px);
}

.c23 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  word-break: break-word;
}

.c29 {
  display: flex;
  padding: 2rem 0;
  transition: flex-direction 500ms ease-in-out;
}

.c29 > section {
  flex-basis: 50%;
}

.c29 > section > header {
  font-weight: bold;
}

.c17 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: var(--color-dark-background-dark-surface);
  color: rgba(255,255,255,1);
  margin: 9rem 1rem 9rem 1rem;
  border-radius: 0.125rem;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
  display: flex;
  flex-wrap: wrap;
  width: 80%;
}

.c34 {
  width: 42px;
  height: 42px;
}

.c34 > polygon {
  transition: fill 0.24s cubic-bezier(0.4,0,0.2,1);
  fill: #fff;
}

.c32 {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  transition: justify-content 0.5s cubic-bezier(0.4,0,0.2,1);
  margin-right: 1rem;
}

.c33 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  appearance: none;
  user-select: none;
}

.c35 {
  overflow: hidden;
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1), margin-top 0.62s cubic-bezier(0.4,0,0.2,1),height 0.24s ease-out;
  height: 0;
  background-color: var(--color-dark-background-dark-surface);
  color: #fff;
  width: 100vw;
  flex-basis: 100%;
  display: flex;
  flex-wrap: wrap;
  order: 4;
}

.c37 {
  display: inline-flex;
  border-radius: 4px;
  margin: 0.25rem;
  padding: 0.5rem;
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  color: #1b1b1b;
  border-radius: 6px;
}

.c36 {
  margin: 0;
  padding: 1rem;
}

.c12 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1);
  color: var(--color-text-body);
  background-color: var(--color-dark-background-main);
  margin: 0;
  padding: 0;
  position: relative;
  min-width: 0;
  word-wrap: break-word;
  word-break: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  background-clip: border-box;
  border-radius: 0.125rem;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
}

.c12 img {
  border-radius: 0.125rem 0;
}

.c12 figcaption {
  padding: 1.25rem;
}

.c12 header {
  transition: inherit;
  color: var(--color-text-secondary);
  font-size: 1.5rem;
  font-weight: 300;
}

.c12 div[role='separator'],
.c12 time {
  font-size: 80%;
  font-weight: 400;
  color: var(--color-text-unimportant);
}

.c12 a {
  color: var(--color-text-unimportant);
  border-color: var(--color-text-unimportant);
  border-width: 1px;
}

.c12 a:link,
.c12 a:visited {
  color: var(--color-text-unimportant);
}

.c12 a::after {
  display: none;
}

.c11 {
  display: grid;
  padding: 1rem;
  grid-gap: 0.5rem;
  grid-auto-rows: auto;
}

.c15 {
  display: inline-flex;
}

.c14 {
  filter: url(#green-tint);
  max-width: 100%;
}

.c14 > img {
  max-width: 100%;
}

.c13 {
  margin: 0;
  padding: 0;
}

.c10 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: var(--color-dark-background-dark-surface);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 4rem 0 0 0;
}

.c10 > h1 {
  color: #fff;
  font-size: 3em;
  font-weight: 300;
  text-shadow: 0 1px 0 rgba(255,255,255,0.55),0 2px 0 rgba(0,0,0,0.1), 0 3px 0 rgba(0,0,0,0.1),0 4px 0 rgba(0,0,0,0.1);
}

.c16 {
  color: var(--color-text-body);
  display: inline-flex;
  padding: 0 0.5rem;
}

@media (max-width:1023px) {
  .c18 {
    width: 75%;
    flex-direction: row;
    order: 2;
    height: unset;
    justify-content: unset;
    padding: 0 0 0.5rem 0;
  }
}

@media (max-width:1023px) {
  .c19 {
    flex-basis: 33%;
    width: 33%;
    text-align: center;
  }
}

@media (max-width:480px) {
  .c4 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c0 {
    height: 7rem;
  }
}

@media (max-width:480px) {
  .c3 {
    text-align: center;
    margin-bottom: 0;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
    flex-basis: 100%;
  }
}

@media (max-width:1023px) {
  .c31 {
    margin-bottom: 1rem;
  }
}

@media (min-width:1024px) {
  .c31 {
    visibility: hidden;
    margin: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    margin-top: 3rem;
  }
}

@media (max-width:1024px) {
  .c24 {
    flex-basis: 100%;
  }
}

@media (min-width:1024px) {
  .c28 {
    flex-basis: 100%;
  }
}

@media (max-width:1024px) {
  .c28 {
    flex-basis: 100%;
  }
}

@media (max-width:1024px) {
  .c25 {
    flex-basis: 100%;
  }
}

@media (max-width:500px) {
  .c22 {
    object-position: left;
  }
}

@media (max-width:1023px) {
  .c22 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c22 {
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2),0 1px 5px 0 rgba(0,0,0,0.12);
    height: 120%;
    object-position: left;
    margin-top: -3rem;
    max-width: 21rem;
    flex-basis: 30%;
  }
}

@media (max-width:1023px) {
  .c21 {
    flex-wrap: wrap;
    width: 100%;
  }
}

@media (max-width:1023px) {
  .c23 {
    display: flex;
    flex-wrap: wrap;
  }
}

@media (max-width:1023px) {
  .c29 {
    padding: 0.5rem 0;
    width: 100%;
  }
}

@media (max-width:1023px) {
  .c17 {
    width: calc(100% - 2rem);
    height: unset;
    flex-wrap: wrap;
    margin: 5.5rem 1rem 2rem 1rem;
  }
}

@media (max-width:480px) {
  .c17 {
    margin: 8rem 1rem 2rem;
  }
}

@media (max-width:1023px) {
  .c32 {
    justify-content: center;
    flex-basis: 25%;
    order: 3;
    margin-right: 0;
    margin-top: -0.25rem;
  }
}

@media (min-width:1024px) {
  .c32 {
    margin-top: -3.5rem;
  }
}

@media (max-width:1023px) {
  .c33 {
    width: 42px;
    height: 42px;
  }
}

@media (min-width:1024px) {
  .c12 {
    padding: 0 1rem 0 0;
  }

  .c12 img {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0.125rem;
  }
}

@media (max-width:1023px) {
  .c12 {
    box-shadow: 0 1rem 0.75rem rgba(0,0,0,0.19), 0 0.5rem 0.5rem rgba(0,0,0,0.23);
  }
}

@media (min-width:1024px) {
  .c13 {
    display: grid;
    grid-template-columns: calc(50vw - 2rem) calc(50vw - 2rem);
    grid-gap: 1rem;
  }

  .c13 picture,
  .c13 img {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }

  .c13 figcaption {
    padding: 1.25rem 0;
  }
}

@media (max-width:1023px) {
  .c13 img {
    max-height: 65vh;
  }
}

@media (max-width:480px) {
  .c10 {
    padding-top: 8rem;
  }
}

<div>
  <header
    class="c0"
    role="banner"
  >
    <a
      class="c1 c2"
      href="/"
    >
      <p
        class="c3"
        id="logo"
      />
    </a>
    <nav
      class="c4"
    >
      <ul
        class="c5"
      >
        <li>
          <a
            class="c1"
            href="/Portfolio"
            rel="me"
          >
            work
          </a>
        </li>
        <li>
          <a
            class="c1"
            href="/"
            rel="me"
          >
            about
          </a>
        </li>
      </ul>
    </nav>
    <svg
      class="c6 c7 c8"
      role="img"
      viewBox="0 0 24 24"
      xmlns="https://www.w3.org/2000/svg"
    >
      <title>
        Brightness Icon
      </title>
      <desc>
        An animated image, transitioning between a sun and a moon
      </desc>
      <g>
        <polygon
          points="20 15.31 23.31 12 20 8.69 20 4 15.31 4 12 0.69 8.69 4 4 4 4 8.69 0.69 12 4 15.31 4 20 8.69 20 12 23.31 15.31 20 20 20"
        />
        <path
          d="M11.9949374,18.0053564 C8.97056925,18.0053564 5.98781556,15.6088503 5.98781556,12 C5.98781556,8.39114971 8.97056925,5.99402647 11.9949374,5.99402647 C16.0164601,5.99402647 18.0020592,8.99824992 18.0020592,12 C18.0020592,15.0017501 15.9874562,18.0053564 11.9949374,18.0053564 Z"
        >
          <animate
            attributeName="d"
            begin="0s"
            dur="240ms"
            fill="freeze"
            keySplines="0.9 0.1 0.1 0.9"
            values="M11.9949374,18.0053564 C8.97056925,18.0053564 5.98781556,15.6088503 5.98781556,12 C5.98781556,8.39114971 8.97056925,5.99402647 11.9949374,5.99402647 C16.0164601,5.99402647 18.0020592,8.99824992 18.0020592,12 C18.0020592,15.0017501 15.9874562,18.0053564 11.9949374,18.0053564 Z;M12.5,18 C10.8318231,18 10.0152775,17.8642326 8.96591604,17.284968 C7.91655461,16.7057035 5.98781556,14.7923877 5.98781556,12 C5.98781556,9.20761233 7.41109679,7.7118608 9.02170537,6.77297869 C9.82204333,6.24410999 10.5020793,5.93633719 12.5,6 C15.8083169,6.10541798 18.0020592,8.69 18.0020592,12 C18.0020592,15.31 15.8099803,18 12.5,18 Z;M12.5,18 C11.61,18 10.76,17.8 10,17.45 C12.06,16.5 13.5,14.42 13.5,12 C13.5,9.58 12.06,7.5 10,6.55 C10.76,6.2 11.61,6 12.5,6 C15.81,6 18.0020592,8.69 18.0020592,12 C18.0020592,15.31 15.81,18 12.5,18 Z"
          />
        </path>
      </g>
      <path
        class="c9"
        d="M12,8 C9.79,8 8,9.79 8,12 C8,14.21 9.79,16 12,16 C14.21,16 16,14.21 16,12 C16,9.79 14.21,8 12,8 Z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </header>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@graph":[{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":"","sameAs":["https://www.linkedin.com/in/james-wiens/","https://orcid.org/0000-0002-6397-6217"],"url":"","email":"james@jameswiens.com","telephone":"12506509455","description":"","image":"","address":{"@type":"PostalAddress","addressLocality":"","addressRegion":"","postalCode":"","streetAddress":""},"knowsAbout":["skill1"]},{"@type":"SoftwareSourceCode","description":"Generic, web portfolio, configurable at runtime, with all the latest greatest features in a modern technology stack: react, amp, pwa, jest, storybook, next, monorepo, styled-components, graphql, apollo","name":"Modern Stack Web Portfolio","url":"https://github.com/aretecode/modern-stack-web-portfolio","keywords":"portfolio,opensource,react,typescript,graphql,apollo","datePublished":"2019-03-15","dateCreated":"2019-03-20","creator":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"image":{"@type":"ImageObject","url":"https://noccumpr-cdn.sirv.com/images/modern-stack-skeletons-web-lighthouse.png","height":866,"width":3140}},{"@type":"WebSite","name":"","url":"","@id":"http://localhost:3000"},{"@type":"Organization","url":"/Portfolio/Experience?index=0","name":"Open Source","member":{"@type":"OrganizationRole","member":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"startDate":"01/02/2013","endDate":"current","roleName":""}},{"@type":"ItemList","itemListElement":[{"@type":"ListItem","position":1,"url":"/Portfolio/Experience?index=0"}]}]}
  </script>
  <main
    class=""
  >
    <header
      class="c10"
    >
      <h1>
        What I've done
      </h1>
    </header>
    <div
      class="c11"
    >
      <article
        class="c12"
      >
        <figure
          class="c13"
        >
          <picture
            class="c14"
          >
            <source
              media="(max-width: 800px)"
              srcset="https://user-images.githubusercontent.com/4022631/55686780-04f0f980-5983-11e9-8152-204681b0840f.png"
            />
            <source
              media="(max-width: 1024px)"
              srcset="https://user-images.githubusercontent.com/4022631/55686780-04f0f980-5983-11e9-8152-204681b0840f.png"
            />
            <source
              media="(min-width: 2000px)"
              srcset="https://user-images.githubusercontent.com/4022631/55686780-04f0f980-5983-11e9-8152-204681b0840f.png"
            />
            <img
              alt="work picture for Open Source"
              loading="lazy"
              src="https://user-images.githubusercontent.com/4022631/55686780-04f0f980-5983-11e9-8152-204681b0840f.png"
            />
            <noscript />
          </picture>
          <figcaption>
            <header>
              Open Source
            </header>
            <section>
              <strong />
              <p />
              <p />
              <a
                class="c1"
                href="https://github.com/aretecode"
              >
                https://github.com/aretecode
              </a>
            </section>
            <section>
              <a
                class="c1"
                href="/Portfolio/Experience?index=0"
              >
                <time
                  class="c15"
                  datetime="01/02/2013"
                >
                  01/02/2013
                </time>
                <div
                  class="c16"
                  role="separator"
                >
                  -
                </div>
                <time
                  class="c15"
                  datetime="current"
                >
                  current
                </time>
              </a>
            </section>
          </figcaption>
        </figure>
      </article>
    </div>
  </main>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@graph":[{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":"","sameAs":["https://www.linkedin.com/in/james-wiens/","https://orcid.org/0000-0002-6397-6217"],"url":"","email":"james@jameswiens.com","telephone":"12506509455","description":"","image":"","address":{"@type":"PostalAddress","addressLocality":"","addressRegion":"","postalCode":"","streetAddress":""},"knowsAbout":["skill1"]},{"@type":"SoftwareSourceCode","description":"Generic, web portfolio, configurable at runtime, with all the latest greatest features in a modern technology stack: react, amp, pwa, jest, storybook, next, monorepo, styled-components, graphql, apollo","name":"Modern Stack Web Portfolio","url":"https://github.com/aretecode/modern-stack-web-portfolio","keywords":"portfolio,opensource,react,typescript,graphql,apollo","datePublished":"2019-03-15","dateCreated":"2019-03-20","creator":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"image":{"@type":"ImageObject","url":"https://noccumpr-cdn.sirv.com/images/modern-stack-skeletons-web-lighthouse.png","height":866,"width":3140}},{"@type":"WebSite","name":"","url":"","@id":"http://localhost:3000"},{"@type":"Organization","url":"/Portfolio/Experience?index=0","name":"Open Source","member":{"@type":"OrganizationRole","member":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"startDate":"01/02/2013","endDate":"current","roleName":""}},{"@type":"ItemList","itemListElement":[{"@type":"ListItem","position":1,"url":"/Portfolio/Experience?index=0"}]}]}
  </script>
  <article
    class="c17"
  >
    <aside
      class="c18"
    >
      <a
        class="c1 c19"
        href="https://www.linkedin.com/in/james-wiens/"
        rel="me"
        title="aretecode"
      >
        <svg
          class="c20"
          role="img"
          viewBox="0 0 24 24"
          xmlns="https://www.w3.org/2000/svg"
        >
          <title>
            linkedin icon
          </title>
          <path
            d="M16.893 20.452v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286h-3.555zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452z"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </a>
    </aside>
    <figure
      class="c21"
    >
      <img
        alt="about me picture"
        class="c22"
        src=""
      />
      <figcaption
        class="c23"
      >
        <h1
          class="c24"
        />
        <h2
          class="c25"
        >
          
          <i
            class="c26"
          >
            ↔
          </i>
          
        </h2>
        <hr
          class="c27"
          role="separator"
        />
        <p
          class="c28"
        />
        <nav
          class="c29"
        >
          <section>
            <header>
              Phone
            </header>
            <a
              class="c1 c30"
              href="tel:12506509455"
            >
              +
              12506509455
            </a>
          </section>
          <section>
            <header>
              Email
            </header>
            <a
              class="c1 c30"
              href="mailto:james@jameswiens.com"
            >
              james@jameswiens.com
            </a>
          </section>
        </nav>
      </figcaption>
    </figure>
    <hr
      class="c31"
      role="separator"
    />
    <div
      class="c32"
      title="show/hide skills"
    >
      <button
        class="c33"
      >
        <svg
          class="c6 c34"
          role="img"
          title="show"
          viewBox="0 0 24 24"
          xmlns="https://www.w3.org/2000/svg"
        >
          <title>
            Arrow pointing down or up
          </title>
          <polygon
            points="12.5 13.37 18.4 8 20 10.1 12.5 17 5 10.1 6.63 8.04"
          >
            <animate
              attributeName="points"
              begin="0s"
              dur="0ms"
              fill="freeze"
              values=""
            />
          </polygon>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <aside
      aria-hidden="true"
      class="c35"
    >
      <ul
        class="c36"
      >
        <li
          class="c37"
        >
          skill1
        </li>
      </ul>
    </aside>
  </article>
  <footer
    class="c38"
  >
    <p>
      <span>
        ©
        2021
      </span>
       
      <span />
    </p>
    <p>
      <span
        class=""
      >
        Made with
      </span>
      <svg
        class="c39"
        viewBox="0 0 54 50"
        xmlns="https://www.w3.org/2000/svg"
      >
        <title>
          Heart
        </title>
        <path
          d="M24.873 47.201c-1.162-1.341-4.064-3.956-6.449-5.81-7.066-5.496-8.028-6.291-10.897-9.012C2.238 27.364-.008 22.325 0 15.493c.004-3.336.224-4.62 1.131-6.587 1.54-3.335 3.806-5.814 6.704-7.33C9.887.504 10.899.027 14.327.007c3.585-.02 4.34.41 6.449 1.604 2.567 1.452 5.21 4.556 5.756 6.76l.337 1.363.832-1.876c4.7-10.598 19.71-10.44 24.933.264 1.657 3.395 1.839 10.645.37 14.729-1.917 5.327-5.517 9.389-13.839 15.612-5.457 4.082-11.634 10.258-12.064 11.125-.499 1.007-.024.158-2.228-2.386z"
          fill="red"
        />
      </svg>
      <span
        class=""
      >
        in
      </span>
      <svg
        class="c40"
        viewBox="0 0 50 25"
        xmlns="https://www.w3.org/2000/svg"
      >
        <title>
          Canada, eh
        </title>
        <path
          d="M0 0h50v25H0z"
          fill="red"
        />
        <path
          d="M12.5 0h25v25h-25z"
          fill="#FFF"
        />
        <path
          d="M25 2.344l-1.706 3.181c-.194.346-.54.314-.887.12l-1.235-.639.92 4.886c.194.893-.427.893-.733.507l-2.156-2.412-.35 1.225c-.04.16-.217.33-.483.29l-2.725-.574.715 2.603c.154.579.273.819-.154.971l-.972.457 4.691 3.81c.186.144.28.404.214.638l-.41 1.348c1.614-.187 3.062-.467 4.678-.64.142-.014.381.221.38.386l-.214 4.936h.786l-.124-4.925c-.001-.165.216-.411.358-.396 1.616.172 3.064.452 4.679.639l-.41-1.348a.614.614 0 0 1 .213-.638l4.69-3.81-.97-.457c-.428-.152-.309-.392-.155-.971l.715-2.603-2.725.573c-.266.04-.443-.128-.483-.29l-.35-1.224-2.155 2.412c-.307.386-.928.386-.734-.506l.92-4.887-1.235.64c-.347.193-.693.225-.887-.121"
          fill="red"
        />
      </svg>
    </p>
    <p>
      <span
        class=""
      >
        Open Sourced at
      </span>
      <a
        class="c1 c41"
        href="https://github.com/aretecode/modern-stack-web-portfolio"
      >
        github.com/aretecode
      </a>
    </p>
    <aside
      class="c18 c42"
    >
      <a
        class="c1 c19"
        href="https://www.linkedin.com/in/james-wiens/"
        rel="me"
        title="aretecode"
      >
        <svg
          class="c20"
          role="img"
          viewBox="0 0 24 24"
          xmlns="https://www.w3.org/2000/svg"
        >
          <title>
            linkedin icon
          </title>
          <path
            d="M16.893 20.452v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286h-3.555zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452z"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </a>
    </aside>
  </footer>
  <svg
    class="c43"
  >
    <filter
      color-interpolation-filters="sRGB"
      height="100%"
      id="green-tint"
      width="100%"
      x="0"
      y="0"
    >
      <fecolormatrix
        type="matrix"
        values="0.36 0 0 0  0.02
              0.56 0 0 0  0.06
              0.40 0 0 0  0.16
                0  0 0 1  0"
      />
    </filter>
  </svg>
</div>
`;

exports[`<App> should match snapshot for amp 1`] = `
.c6 {
  user-select: none;
}

.c1 {
  text-decoration: none;
  position: relative;
  letter-spacing: 0.2em;
  color: var(--color-link);
}

.c1:link,
.c1:visited {
  color: var(--color-link);
}

.c1:focus {
  outline: thin dotted;
}

.c1:hover {
  color: #aaa;
}

.c1:link {
  -webkit-tap-highlight-color: rgba(102,102,102,0.5);
}

.c19 {
  width: 2rem;
  height: 2rem;
}

.c19 path:first-of-type {
  transition: fill 0.24s cubic-bezier(0.4,0,0.2,1);
  fill: #fff;
}

.c17 {
  padding: 1rem;
  width: 75px;
  display: inline-flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
  object-fit: contain;
  object-position: bottom;
  transition: flex-direction 0.24s cubic-bezier(0,0,0.2,1), width 0.24s cubic-bezier(0,0,0.2,1);
}

.c36 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: var(--color-dark-background-dark-surface);
  padding: 2rem 1.25rem;
}

.c36 p {
  color: var(--color-text-body);
}

.c37 {
  color: #df0909;
  display: inline-flex;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  height: 12px;
}

.c38 {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  transform: translateY(1px);
  display: inline-flex;
  width: 38px;
  height: 14px;
}

.c39 {
  padding-left: 0.3rem;
  text-decoration: underline;
}

.c40.c40 {
  flex-direction: row;
  display: flex;
  justify-content: space-between;
  padding: 0;
  width: 25vw;
  height: unset;
}

.c40.c40 > a {
  width: unset;
  flex-basis: unset;
  display: initial;
  padding: 1rem 1rem 1rem 0;
}

.c40.c40 > a:last-child {
  display: none;
}

.c40.c40 > a > svg path:first-of-type {
  fill: #fff;
}

.c5 {
  display: flex;
  justify-content: space-around;
  padding: 0;
  margin: 0;
}

.c5 > li {
  display: inline-flex;
}

.c5 > li > a {
  padding: 1rem;
}

.c9.c9 {
  fill: transparent;
  transform: scale(0);
  transform-origin: center;
  transition: transform 0.12s cubic-bezier(0.4,0,0.2,1), fill 0.48s cubic-bezier(0.4,0,0.2,1);
}

.c7 > g > path {
  fill: #000;
}

.c7 > g > polygon {
  fill: #fff;
}

.c8 {
  width: 24px;
  height: 24px;
}

.c0 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: rgba(255,255,255,0.05);
  position: absolute;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  height: 4rem;
  padding-left: 1.5rem;
  padding-right: 0.5rem;
}

.c3 {
  color: var(--color-text-body);
}

.c41 {
  height: 0;
  width: 0;
  visibility: hidden;
  position: absolute;
}

.c28.c28.c28 {
  color: unset;
  text-decoration: initial;
  letter-spacing: initial;
}

.c29 {
  color: var(--color-text-body);
  display: inline-flex;
  padding: 0 0.5rem;
  width: 90%;
  border: none;
  border-top: 1px solid var(--color-dark-background-light);
  border-bottom: 1px solid var(--color-dark-background-dark);
  opacity: 0.1;
  margin: 0 auto;
  margin-top: 1rem;
  padding: 0;
  height: 2px;
  order: 1;
  transition: margin-top 0.96s ease-in-out,margin-left 0.24s ease-in-out;
}

.c25 {
  color: var(--color-text-body);
  display: inline-flex;
  padding: 0 0.5rem;
  color: var(--color-text-secondary);
  border: none;
  border-top: 5px solid var(--color-text-secondary);
  margin: 0;
  padding: 0;
  height: 0.75rem;
  width: 8vw;
}

.c22 {
  font-size: 2rem;
  margin-bottom: 0;
}

.c24 {
  font-style: unset;
  padding-right: 0.15rem;
  opacity: 0.3;
}

.c26 {
  margin-top: 1rem;
}

.c23 {
  transition: color 0.24s cubic-bezier(0.4,0,0.2,1);
  color: var(--color-dark-purple);
  margin: 0;
  margin-top: -0.5rem;
  font-size: 1.2rem;
}

.c20 {
  margin: 0;
  padding: 0;
  display: flex;
  width: calc(100% - 75px);
}

.c21 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  word-break: break-word;
}

.c27 {
  display: flex;
  padding: 2rem 0;
  transition: flex-direction 500ms ease-in-out;
}

.c27 > section {
  flex-basis: 50%;
}

.c27 > section > header {
  font-weight: bold;
}

.c16 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: var(--color-dark-background-dark-surface);
  color: rgba(255,255,255,1);
  margin: 9rem 1rem 9rem 1rem;
  border-radius: 0.125rem;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
  display: flex;
  flex-wrap: wrap;
  width: 80%;
}

.c32 {
  width: 42px;
  height: 42px;
}

.c32 > polygon {
  transition: fill 0.24s cubic-bezier(0.4,0,0.2,1);
  fill: #fff;
}

.c30 {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  transition: justify-content 0.5s cubic-bezier(0.4,0,0.2,1);
  margin-right: 1rem;
}

.c31 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  appearance: none;
  user-select: none;
}

.c33 {
  overflow: hidden;
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1), margin-top 0.62s cubic-bezier(0.4,0,0.2,1),height 0.24s ease-out;
  height: 0;
  background-color: var(--color-dark-background-dark-surface);
  color: #fff;
  width: 100vw;
  flex-basis: 100%;
  display: flex;
  flex-wrap: wrap;
  order: 4;
}

.c35 {
  display: inline-flex;
  border-radius: 4px;
  margin: 0.25rem;
  padding: 0.5rem;
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  color: #1b1b1b;
  border-radius: 6px;
}

.c34 {
  margin: 0;
  padding: 1rem;
}

.c12 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1), color 0.24s cubic-bezier(0.4,0,0.2,1);
  color: var(--color-text-body);
  background-color: var(--color-dark-background-main);
  margin: 0;
  padding: 0;
  position: relative;
  min-width: 0;
  word-wrap: break-word;
  word-break: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  background-clip: border-box;
  border-radius: 0.125rem;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
}

.c12 img {
  border-radius: 0.125rem 0;
}

.c12 figcaption {
  padding: 1.25rem;
}

.c12 header {
  transition: inherit;
  color: var(--color-text-secondary);
  font-size: 1.5rem;
  font-weight: 300;
}

.c12 div[role='separator'],
.c12 time {
  font-size: 80%;
  font-weight: 400;
  color: var(--color-text-unimportant);
}

.c12 a {
  color: var(--color-text-unimportant);
  border-color: var(--color-text-unimportant);
  border-width: 1px;
}

.c12 a:link,
.c12 a:visited {
  color: var(--color-text-unimportant);
}

.c12 a::after {
  display: none;
}

.c11 {
  display: grid;
  padding: 1rem;
  grid-gap: 0.5rem;
  grid-auto-rows: auto;
}

.c14 {
  display: inline-flex;
}

.c13 {
  margin: 0;
  padding: 0;
}

.c10 {
  transition: background-color 0.24s cubic-bezier(0.4,0,0.2,1);
  background-color: var(--color-dark-background-dark-surface);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 4rem 0 0 0;
}

.c10 > h1 {
  color: #fff;
  font-size: 3em;
  font-weight: 300;
  text-shadow: 0 1px 0 rgba(255,255,255,0.55),0 2px 0 rgba(0,0,0,0.1), 0 3px 0 rgba(0,0,0,0.1),0 4px 0 rgba(0,0,0,0.1);
}

.c15 {
  color: var(--color-text-body);
  display: inline-flex;
  padding: 0 0.5rem;
}

@media (max-width:1023px) {
  .c17 {
    width: 75%;
    flex-direction: row;
    order: 2;
    height: unset;
    justify-content: unset;
    padding: 0 0 0.5rem 0;
  }
}

@media (max-width:1023px) {
  .c18 {
    flex-basis: 33%;
    width: 33%;
    text-align: center;
  }
}

@media (max-width:480px) {
  .c4 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c0 {
    height: 7rem;
  }
}

@media (max-width:480px) {
  .c3 {
    text-align: center;
    margin-bottom: 0;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
    flex-basis: 100%;
  }
}

@media (max-width:1023px) {
  .c29 {
    margin-bottom: 1rem;
  }
}

@media (min-width:1024px) {
  .c29 {
    visibility: hidden;
    margin: 0;
  }
}

@media (min-width:1024px) {
  .c22 {
    margin-top: 3rem;
  }
}

@media (max-width:1024px) {
  .c22 {
    flex-basis: 100%;
  }
}

@media (min-width:1024px) {
  .c26 {
    flex-basis: 100%;
  }
}

@media (max-width:1024px) {
  .c26 {
    flex-basis: 100%;
  }
}

@media (max-width:1024px) {
  .c23 {
    flex-basis: 100%;
  }
}

@media (max-width:500px) {

}

@media (max-width:1023px) {

}

@media (min-width:1024px) {

}

@media (max-width:1023px) {
  .c20 {
    flex-wrap: wrap;
    width: 100%;
  }
}

@media (max-width:1023px) {
  .c21 {
    display: flex;
    flex-wrap: wrap;
  }
}

@media (max-width:1023px) {
  .c27 {
    padding: 0.5rem 0;
    width: 100%;
  }
}

@media (max-width:1023px) {
  .c16 {
    width: calc(100% - 2rem);
    height: unset;
    flex-wrap: wrap;
    margin: 5.5rem 1rem 2rem 1rem;
  }
}

@media (max-width:480px) {
  .c16 {
    margin: 8rem 1rem 2rem;
  }
}

@media (max-width:1023px) {
  .c30 {
    justify-content: center;
    flex-basis: 25%;
    order: 3;
    margin-right: 0;
    margin-top: -0.25rem;
  }
}

@media (min-width:1024px) {
  .c30 {
    margin-top: -3.5rem;
  }
}

@media (max-width:1023px) {
  .c31 {
    width: 42px;
    height: 42px;
  }
}

@media (min-width:1024px) {
  .c12 {
    padding: 0 1rem 0 0;
  }

  .c12 img {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0.125rem;
  }
}

@media (max-width:1023px) {
  .c12 {
    box-shadow: 0 1rem 0.75rem rgba(0,0,0,0.19), 0 0.5rem 0.5rem rgba(0,0,0,0.23);
  }
}

@media (min-width:1024px) {
  .c13 {
    display: grid;
    grid-template-columns: calc(50vw - 2rem) calc(50vw - 2rem);
    grid-gap: 1rem;
  }

  .c13 picture,
  .c13 img {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }

  .c13 figcaption {
    padding: 1.25rem 0;
  }
}

@media (max-width:1023px) {
  .c13 img {
    max-height: 65vh;
  }
}

@media (max-width:480px) {
  .c10 {
    padding-top: 8rem;
  }
}

<div>
  <header
    class="c0"
    role="banner"
  >
    <a
      class="c1 c2"
      href="/"
    >
      <p
        class="c3"
        id="logo"
      />
    </a>
    <nav
      class="c4"
    >
      <ul
        class="c5"
      >
        <li>
          <a
            class="c1"
            href="/Portfolio"
            rel="me"
          >
            work
          </a>
        </li>
        <li>
          <a
            class="c1"
            href="/"
            rel="me"
          >
            about
          </a>
        </li>
      </ul>
    </nav>
    <svg
      class="c6 c7 c8"
      role="img"
      viewBox="0 0 24 24"
      xmlns="https://www.w3.org/2000/svg"
    >
      <title>
        Brightness Icon
      </title>
      <desc>
        An animated image, transitioning between a sun and a moon
      </desc>
      <g>
        <polygon
          points="20 15.31 23.31 12 20 8.69 20 4 15.31 4 12 0.69 8.69 4 4 4 4 8.69 0.69 12 4 15.31 4 20 8.69 20 12 23.31 15.31 20 20 20"
        />
        <path
          d="M11.9949374,18.0053564 C8.97056925,18.0053564 5.98781556,15.6088503 5.98781556,12 C5.98781556,8.39114971 8.97056925,5.99402647 11.9949374,5.99402647 C16.0164601,5.99402647 18.0020592,8.99824992 18.0020592,12 C18.0020592,15.0017501 15.9874562,18.0053564 11.9949374,18.0053564 Z"
        />
      </g>
      <path
        class="c9"
        d="M12,8 C9.79,8 8,9.79 8,12 C8,14.21 9.79,16 12,16 C14.21,16 16,14.21 16,12 C16,9.79 14.21,8 12,8 Z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </header>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@graph":[{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":"","sameAs":["https://www.linkedin.com/in/james-wiens/","https://orcid.org/0000-0002-6397-6217"],"url":"","email":"james@jameswiens.com","telephone":"12506509455","description":"","image":"","address":{"@type":"PostalAddress","addressLocality":"","addressRegion":"","postalCode":"","streetAddress":""},"knowsAbout":["skill1"]},{"@type":"SoftwareSourceCode","description":"Generic, web portfolio, configurable at runtime, with all the latest greatest features in a modern technology stack: react, amp, pwa, jest, storybook, next, monorepo, styled-components, graphql, apollo","name":"Modern Stack Web Portfolio","url":"https://github.com/aretecode/modern-stack-web-portfolio","keywords":"portfolio,opensource,react,typescript,graphql,apollo","datePublished":"2019-03-15","dateCreated":"2019-03-20","creator":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"image":{"@type":"ImageObject","url":"https://noccumpr-cdn.sirv.com/images/modern-stack-skeletons-web-lighthouse.png","height":866,"width":3140}},{"@type":"WebSite","name":"","url":"","@id":"http://localhost:3000"},{"@type":"Organization","url":"/Portfolio/Experience?index=0","name":"Open Source","member":{"@type":"OrganizationRole","member":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"startDate":"01/02/2013","endDate":"current","roleName":""}},{"@type":"ItemList","itemListElement":[{"@type":"ListItem","position":1,"url":"/Portfolio/Experience?index=0"}]}]}
  </script>
  <main
    class=""
  >
    <header
      class="c10"
    >
      <h1>
        What I've done
      </h1>
    </header>
    <div
      class="c11"
    >
      <article
        class="c12"
      >
        <figure
          class="c13"
        >
          <amp-img
            alt="work picture for Open Source"
            layout="responsive"
            src="https://user-images.githubusercontent.com/4022631/55686780-04f0f980-5983-11e9-8152-204681b0840f.png"
          />
          <figcaption>
            <header>
              Open Source
            </header>
            <section>
              <strong />
              <p />
              <p />
              <a
                class="c1"
                href="https://github.com/aretecode"
              >
                https://github.com/aretecode
              </a>
            </section>
            <section>
              <a
                class="c1"
                href="/Portfolio/Experience?index=0"
              >
                <time
                  class="c14"
                  datetime="01/02/2013"
                >
                  01/02/2013
                </time>
                <div
                  class="c15"
                  role="separator"
                >
                  -
                </div>
                <time
                  class="c14"
                  datetime="current"
                >
                  current
                </time>
              </a>
            </section>
          </figcaption>
        </figure>
      </article>
    </div>
  </main>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@graph":[{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":"","sameAs":["https://www.linkedin.com/in/james-wiens/","https://orcid.org/0000-0002-6397-6217"],"url":"","email":"james@jameswiens.com","telephone":"12506509455","description":"","image":"","address":{"@type":"PostalAddress","addressLocality":"","addressRegion":"","postalCode":"","streetAddress":""},"knowsAbout":["skill1"]},{"@type":"SoftwareSourceCode","description":"Generic, web portfolio, configurable at runtime, with all the latest greatest features in a modern technology stack: react, amp, pwa, jest, storybook, next, monorepo, styled-components, graphql, apollo","name":"Modern Stack Web Portfolio","url":"https://github.com/aretecode/modern-stack-web-portfolio","keywords":"portfolio,opensource,react,typescript,graphql,apollo","datePublished":"2019-03-15","dateCreated":"2019-03-20","creator":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"image":{"@type":"ImageObject","url":"https://noccumpr-cdn.sirv.com/images/modern-stack-skeletons-web-lighthouse.png","height":866,"width":3140}},{"@type":"WebSite","name":"","url":"","@id":"http://localhost:3000"},{"@type":"Organization","url":"/Portfolio/Experience?index=0","name":"Open Source","member":{"@type":"OrganizationRole","member":{"@type":"Person","@id":"https://orcid.org/0000-0002-6397-6217","name":""},"startDate":"01/02/2013","endDate":"current","roleName":""}},{"@type":"ItemList","itemListElement":[{"@type":"ListItem","position":1,"url":"/Portfolio/Experience?index=0"}]}]}
  </script>
  <article
    class="c16"
  >
    <aside
      class="c17"
    >
      <a
        class="c1 c18"
        href="https://www.linkedin.com/in/james-wiens/"
        rel="me"
        title="aretecode"
      >
        <svg
          class="c19"
          role="img"
          viewBox="0 0 24 24"
          xmlns="https://www.w3.org/2000/svg"
        >
          <title>
            linkedin icon
          </title>
          <path
            d="M16.893 20.452v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286h-3.555zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452z"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </a>
    </aside>
    <figure
      class="c20"
    >
      <amp-img
        alt="about me picture"
        height="600"
        layout="responsive"
        src=""
        width="600"
      />
      <figcaption
        class="c21"
      >
        <h1
          class="c22"
        />
        <h2
          class="c23"
        >
          
          <i
            class="c24"
          >
            ↔
          </i>
          
        </h2>
        <hr
          class="c25"
          role="separator"
        />
        <p
          class="c26"
        />
        <nav
          class="c27"
        >
          <section>
            <header>
              Phone
            </header>
            <a
              class="c1 c28"
              href="tel:12506509455"
            >
              +
              12506509455
            </a>
          </section>
          <section>
            <header>
              Email
            </header>
            <a
              class="c1 c28"
              href="mailto:james@jameswiens.com"
            >
              james@jameswiens.com
            </a>
          </section>
        </nav>
      </figcaption>
    </figure>
    <hr
      class="c29"
      role="separator"
    />
    <div
      class="c30"
      title="show/hide skills"
    >
      <button
        class="c31"
      >
        <svg
          class="c6 c32"
          role="img"
          title="show"
          viewBox="0 0 24 24"
          xmlns="https://www.w3.org/2000/svg"
        >
          <title>
            Arrow pointing down or up
          </title>
          <polygon
            points="12.5 13.37 18.4 8 20 10.1 12.5 17 5 10.1 6.63 8.04"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <aside
      aria-hidden="true"
      class="c33"
      style="height: 0px;"
    >
      <ul
        class="c34"
      >
        <li
          class="c35"
        >
          skill1
        </li>
      </ul>
    </aside>
  </article>
  <footer
    class="c36"
  >
    <p>
      <span>
        ©
        2021
      </span>
       
      <span />
    </p>
    <p>
      <span
        class=""
      >
        Made with
      </span>
      <svg
        class="c37"
        viewBox="0 0 54 50"
        xmlns="https://www.w3.org/2000/svg"
      >
        <title>
          Heart
        </title>
        <path
          d="M24.873 47.201c-1.162-1.341-4.064-3.956-6.449-5.81-7.066-5.496-8.028-6.291-10.897-9.012C2.238 27.364-.008 22.325 0 15.493c.004-3.336.224-4.62 1.131-6.587 1.54-3.335 3.806-5.814 6.704-7.33C9.887.504 10.899.027 14.327.007c3.585-.02 4.34.41 6.449 1.604 2.567 1.452 5.21 4.556 5.756 6.76l.337 1.363.832-1.876c4.7-10.598 19.71-10.44 24.933.264 1.657 3.395 1.839 10.645.37 14.729-1.917 5.327-5.517 9.389-13.839 15.612-5.457 4.082-11.634 10.258-12.064 11.125-.499 1.007-.024.158-2.228-2.386z"
          fill="red"
        />
      </svg>
      <span
        class=""
      >
        in
      </span>
      <svg
        class="c38"
        viewBox="0 0 50 25"
        xmlns="https://www.w3.org/2000/svg"
      >
        <title>
          Canada, eh
        </title>
        <path
          d="M0 0h50v25H0z"
          fill="red"
        />
        <path
          d="M12.5 0h25v25h-25z"
          fill="#FFF"
        />
        <path
          d="M25 2.344l-1.706 3.181c-.194.346-.54.314-.887.12l-1.235-.639.92 4.886c.194.893-.427.893-.733.507l-2.156-2.412-.35 1.225c-.04.16-.217.33-.483.29l-2.725-.574.715 2.603c.154.579.273.819-.154.971l-.972.457 4.691 3.81c.186.144.28.404.214.638l-.41 1.348c1.614-.187 3.062-.467 4.678-.64.142-.014.381.221.38.386l-.214 4.936h.786l-.124-4.925c-.001-.165.216-.411.358-.396 1.616.172 3.064.452 4.679.639l-.41-1.348a.614.614 0 0 1 .213-.638l4.69-3.81-.97-.457c-.428-.152-.309-.392-.155-.971l.715-2.603-2.725.573c-.266.04-.443-.128-.483-.29l-.35-1.224-2.155 2.412c-.307.386-.928.386-.734-.506l.92-4.887-1.235.64c-.347.193-.693.225-.887-.121"
          fill="red"
        />
      </svg>
    </p>
    <p>
      <span
        class=""
      >
        Open Sourced at
      </span>
      <a
        class="c1 c39"
        href="https://github.com/aretecode/modern-stack-web-portfolio"
      >
        github.com/aretecode
      </a>
    </p>
    <aside
      class="c17 c40"
    >
      <a
        class="c1 c18"
        href="https://www.linkedin.com/in/james-wiens/"
        rel="me"
        title="aretecode"
      >
        <svg
          class="c19"
          role="img"
          viewBox="0 0 24 24"
          xmlns="https://www.w3.org/2000/svg"
        >
          <title>
            linkedin icon
          </title>
          <path
            d="M16.893 20.452v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286h-3.555zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452z"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </a>
    </aside>
  </footer>
  <svg
    class="c41"
  >
    <filter
      color-interpolation-filters="sRGB"
      height="100%"
      id="green-tint"
      width="100%"
      x="0"
      y="0"
    >
      <fecolormatrix
        type="matrix"
        values="0.36 0 0 0  0.02
              0.56 0 0 0  0.06
              0.40 0 0 0  0.16
                0  0 0 1  0"
      />
    </filter>
  </svg>
</div>
`;
